--- a/recipes.html
+++ b/recipes.html
@@ -149,7 +149,7 @@
             </ol>
 
             <h3>Additional Food images</h3>
-            <img src="images/Ingredients" width="200" alt="All the ingredients needed for this recipe">
+            <img src="images/Ingredients.jpeg" width="200" alt="All the ingredients needed for this recipe">
             <img src="images/Slicedpotatoes.jpeg" width="200" alt="Scooped out potatoes">
             <img src="images/mixture.jpeg" width="200" alt="Mixture to put in the potatoes">  
         </div>
