--- a/travel.html
+++ b/travel.html
@@ -135,7 +135,7 @@
             
             <h3>Photo Gallery</h3>
             <figure> 
-                <img class = "thumbnail" src = "images/Giza_sphynx.jpeg"  width = 200 alt = "Picture of the Sphinx"> 
+                <img class = "thumbnail" src = "images/Giza_sphinx.jpeg"  width = 200 alt = "Picture of the Sphinx"> 
                 <figcaption>Sphinx in Egypt</figcaption>
             </figure>
             <figure> 
