--- a/travel.html
+++ b/travel.html
@@ -12,9 +12,9 @@
     <a href ="#main" id= "#skip" >Skip to Main Content</a>
     <nav>
         <ul>
-            <li><a href="index.html">Home/Travel</a></li>
+            <li><a href="index.html">Home/Pets</a></li>
             <li><a href="recipes.html">Recipes</a></li>
-            <li><a href="pets.html">Pets</a></li>
+            <li><a href="travel.html">Travel</a></li>
         </ul>
     </nav>
     <main>
